16-08-2022
+Implemented page system in display tickets
+Fixed confirm in create ticket and added popup

+Added account display menu
+Added account management pre-menu

18-08-2022
+Sanitized empty fields
+Implemented account creation menu

21-08-2022
+Fixed account structures in binary files
+Implemented employee account editing