@@ -3,7 +3,4 @@
 from modules import tkmenus
 from modules import fileHandling
 
-
-#tkmenus.firstMenu()
-#tkmenus.deleteAccount_user({"empno": 0, "email": "test", "password": "a", "role": 3})
-tkmenus.displayFile("accounts_user", "tesa")
+tkmenus.firstMenu()
